--- a/index.html
+++ b/index.html
@@ -1,113 +1,139 @@
 
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Raul Silva Pereira | Consultoria em TI</title>
+  <title>Raul Silva Pereira — Portfólio</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      margin: 0;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0f172a;
-      color: #e2e8f0;
-    }
-    header {
-      text-align: center;
-      padding: 4rem 1rem;
-      background: linear-gradient(135deg, #0ea5e9, #1e3a8a);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
+      background: linear-gradient(135deg, #0f0f10, #131316);
+      padding: 2rem;
+      line-height: 1.6;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
-    header p {
-      font-size: 1.1rem;
-      opacity: 0.9;
-    }
-    .section {
-      padding: 2rem 1.5rem;
+
+    header {
       max-width: 900px;
-      margin: 0 auto;
-    }
-    .section h2 {
-      color: #38bdf8;
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-    .item {
-      margin-bottom: 1.5rem;
-    }
-    .footer {
+      margin: auto;
+      padding: 4rem 1rem;
       text-align: center;
-      padding: 1.5rem;
-      background-color: #1e293b;
-      color: #94a3b8;
-      font-size: 0.9rem;
     }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+      background: linear-gradient(90deg, #3b82f6, #06b6d4);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin: 2rem 0 1rem;
+      color: #3b82f6;
+    }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 1rem;
+      background: #1a1a1d;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      margin-bottom: 2rem;
+    }
+
+    ul {
+      margin-left: 1.5rem;
+    }
+
+    .emoji {
+      font-size: 1.2rem;
+      margin-right: 0.3rem;
+    }
+
+    footer {
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
+
     a {
-      color: #38bdf8;
+      color: #3b82f6;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>Raul Silva Pereira</h1>
-    <p>Consultoria em TI • Especialista em Microsoft 365, Active Directory, VMware e mais</p>
+    <h1>📂 Raul Silva Pereira</h1>
+    <p>Engenheiro de Computação | Especialista em TI e Cloud | Consultoria em Infraestrutura e Automação</p>
   </header>
 
-  <section class="section">
-    <h2>Sobre Mim</h2>
-    <p>Engenheiro de Computação especializado em soluções de infraestrutura de TI. Atuo como consultor freelancer, oferecendo serviços de alta qualidade e soluções personalizadas para empresas e profissionais.</p>
+  <section>
+    <h2>👨‍💻 Sobre mim</h2>
+    <p>Engenheiro de Computação formado pela Universidade São Judas Tadeu, atuando como Analista de Infraestrutura com expertise em ambientes Microsoft, Linux, VMware e Cloud Computing. Ofereço consultoria especializada em segurança, automação e continuidade de negócios.</p>
   </section>
 
-  <section class="section">
-    <h2>Serviços</h2>
-
-    <div class="item">
-      <strong>Microsoft 365</strong>
-      <p>Administração completa, gestão de usuários, licenças e automações com API Graph.</p>
-    </div>
-
-    <div class="item">
-      <strong>Active Directory e Linux</strong>
-      <p>Gestão de usuários e permissões, ACLs, servidores de arquivos e SFTP.</p>
-    </div>
-
-    <div class="item">
-      <strong>Backup com Veeam Backup & Replication</strong>
-      <p>Implementação, manutenção e recuperação de ambientes físicos e virtuais.</p>
-    </div>
-
-    <div class="item">
-      <strong>VMware vCenter & Horizon</strong>
-      <p>Criação e ajustes de VMs, publicação de aplicativos e gestão de farms e usuários.</p>
-    </div>
-
-    <div class="item">
-      <strong>Certificados Digitais A1 & A3</strong>
-      <p>Configuração completa para e-CAC, PJe e aplicações corporativas.</p>
-    </div>
-
-    <div class="item">
-      <strong>Configuração de Scanners e Ferramentas Técnicas</strong>
-      <p>Integração de scanners com sistemas e configuração de UPA USB para diagnóstico eletrônico em centros automotivos.</p>
-    </div>
-
+  <section>
+    <h2>🛠️ Áreas de Atuação</h2>
+    <ul>
+      <li><span class="emoji">☁️</span> Microsoft 365 & Power Platform</li>
+      <li><span class="emoji">🗂️</span> Active Directory (AD)</li>
+      <li><span class="emoji">🐧</span> Servidores Linux & Windows</li>
+      <li><span class="emoji">🔄</span> Veeam Backup & Replication</li>
+      <li><span class="emoji">💻</span> VMware vSphere & Horizon</li>
+      <li><span class="emoji">🔐</span> Certificados Digitais | Sistemas Jurídicos/Fiscais</li>
+      <li><span class="emoji">🚗</span> Suporte Técnico Automotivo</li>
+    </ul>
   </section>
 
-  <section class="section">
-    <h2>Contato</h2>
-    <p>📧 <a href="mailto:contato@raulsystem.com.br">contato@raulsystem.com.br</a></p>
+  <section>
+    <h2>🏆 Projetos Realizados</h2>
+    <ul>
+      <li>Migração de Exchange Online com SPF/DKIM/DMARC</li>
+      <li>Automatização de relatórios de licenciamento M365</li>
+      <li>Estrutura completa de backups Veeam</li>
+      <li>Provisionamento de VMs em VMware vCenter</li>
+      <li>Publicação de apps via VMware Horizon</li>
+      <li>Configuração de scanners automotivos e UPA</li>
+    </ul>
   </section>
 
-  <footer class="footer">
-    © 2025 Raul Silva Pereira — Consultoria em TI
+  <section>
+    <h2>🎓 Formação</h2>
+    <p>Engenharia de Computação — Universidade São Judas Tadeu</p>
+  </section>
+
+  <section>
+    <h2>📞 Contato</h2>
+    <ul>
+      <li>E-mail: <a href="mailto:contato@raulsystem.com.br">contato@raulsystem.com.br</a></li>
+      <li>Consultoria remota para todo o Brasil</li>
+      <li>Atendimento personalizado sob demanda</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 Raul Silva Pereira — Todos os direitos reservados</p>
   </footer>
 </body>
+
 </html>
