--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-center text-gray-500 py-4 border-t border-gray-700">
-      © 2025 Raul Silva Pereira • Desenvolvido com ❤️ e tecnologia
+      © 2025 Raul Silva Pereira • 
     </footer>
 
     <!-- AOS Script -->
