--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navbar -->
     <header class="bg-gray-800 shadow-md fixed top-0 w-full z-50">
       <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-        <h1 class="text-xl font-bold">Raul Silva Pereira</h1>
+       <!-- <h1 class="text-xl font-bold">Raul Silva Pereira</h1> -->
         <nav class="space-x-4">
           <a href="#sobre" class="hover:text-cyan-400">Sobre</a>
           <a href="#atuacao" class="hover:text-cyan-400">Atuação</a>
@@ -37,7 +37,7 @@
     </header>
 
     <!-- Hero -->
-    <section class="pt-32 pb-20 text-center bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900">
+    <section class="pt-32 pb-20 text-center bg-gradient-to-br from-blue-900 via-gray-900 to-black">
       <div class="max-w-3xl mx-auto">
         <lottie-player
           src="https://assets10.lottiefiles.com/packages/lf20_tfb3estd.json"
@@ -47,6 +47,7 @@
           loop
           autoplay
         ></lottie-player>
+        <h1 class="text-3xl sm:text-4xl font-bold mt-6">Raul Silva Pereira</h1>
         <h2 class="text-4xl font-extrabold mt-6">Engenheiro de Computação & Especialista em Infraestrutura</h2>
         <p class="text-gray-400 mt-4">Consultoria em TI, automação, segurança e continuidade de negócios</p>
       </div>
@@ -55,7 +56,7 @@
     <!-- Sobre -->
     <section id="sobre" class="py-16 bg-gray-900" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4">
-        <h3 class="text-3xl font-semibold mb-4">👨‍💻 Sobre Mim</h3>
+        <h3 class="text-3xl font-semibold text-cyan-400 mb-4">👨‍💻 Sobre Mim</h3>
         <p class="text-gray-300 mb-2">
           Engenheiro de Computação formado pela Universidade São Judas Tadeu, atuando como Analista de Infraestrutura,
           com experiência sólida em ambientes corporativos Microsoft, Linux e VMware.
@@ -69,7 +70,7 @@
     <!-- Atuação -->
     <section id="atuacao" class="py-16 bg-gray-800" data-aos="fade-up">
       <div class="max-w-6xl mx-auto px-4">
-        <h3 class="text-3xl font-semibold mb-8 text-center">🛠️ Áreas de Atuação</h3>
+        <h3 class="text-3xl font-semibold text-cyan-400 mb-8 text-center">🛠️ Áreas de Atuação</h3>
 
         <div class="space-y-10">
           <div>
@@ -151,7 +152,7 @@
     <!-- Projetos -->
     <section id="projetos" class="py-16 bg-gray-800" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4">
-        <h3 class="text-3xl font-semibold mb-6 text-center">🏆 Projetos Realizados</h3>
+        <h3 class="text-3xl font-semibold text-cyan-400 mb-6 text-center">🏆 Projetos Realizados</h3>
         <ul class="list-disc list-inside text-gray-300 space-y-2">
           <li>Migração de Exchange Online com SPF/DKIM/DMARC</li>
           <li>Automação de relatórios de licenciamento M365 por setor</li>
@@ -166,7 +167,7 @@
     <!-- Formação -->
     <section id="formacao" class="py-16 bg-gray-900" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4 text-center">
-        <h3 class="text-3xl font-semibold mb-4">🎓 Formação</h3>
+        <h3 class="text-3xl font-semibold text-cyan-400 mb-4">🎓 Formação</h3>
         <p class="text-gray-300">Engenharia de Computação — Universidade São Judas Tadeu</p>
       </div>
     </section>
@@ -174,13 +175,28 @@
     <!-- Contato -->
     <section id="contato" class="py-16 bg-gray-800" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4 text-center">
-        <h3 class="text-3xl font-semibold mb-4">📞 Contato</h3>
+        <h3 class="text-3xl font-semibold text-cyan-400 mb-4">📞 Contato</h3>
         <p class="text-gray-300 mb-2">📧 <a href="mailto:contato@raulsystem.com.br" class="text-cyan-400 hover:underline">contato@raulsystem.com.br</a></p>
         <p class="text-gray-400">Atendimento remoto em todo o Brasil | Consultoria sob demanda</p>
       </div>
     </section>
 
-    <!-- Footer -->
+    
+<!-- Botão WhatsApp -->
+<a
+  href="https://wa.me/5511951409631"
+  target="_blank"
+  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg transition-all duration-300 z-50 flex items-center"
+  title="Fale comigo no WhatsApp"
+>
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M12.04 2c-5.51 0-9.98 4.47-9.98 9.98 0 1.76.46 3.44 1.32 4.93L2 22l5.26-1.38c1.44.79 3.08 1.21 4.77 1.21h.01c5.51 0 9.98-4.47 9.98-9.98 0-2.67-1.04-5.17-2.93-7.07A9.959 9.959 0 0012.04 2zm0 18c-1.44 0-2.85-.37-4.1-1.08l-.29-.16-3.13.82.84-3.06-.17-.32A8.016 8.016 0 014.04 12c0-4.42 3.6-8.02 8.02-8.02 2.15 0 4.17.84 5.69 2.36a7.978 7.978 0 012.36 5.66c0 4.42-3.6 8-8.02 8zm4.53-6.27c-.25-.13-1.48-.73-1.71-.81-.23-.08-.4-.13-.56.13-.16.25-.64.81-.78.97-.14.16-.29.17-.54.04-.25-.13-1.06-.39-2.02-1.25-.75-.67-1.26-1.49-1.41-1.73-.15-.25-.02-.38.11-.51.12-.12.27-.3.4-.45.13-.15.17-.25.25-.42.08-.17.04-.31-.02-.45-.06-.13-.56-1.35-.77-1.85-.2-.48-.4-.42-.56-.43l-.48-.01c-.17 0-.45.06-.69.31s-.91.89-.91 2.17.93 2.51 1.06 2.68c.13.17 1.83 2.8 4.43 3.93.62.27 1.1.43 1.48.55.62.2 1.18.17 1.63.1.5-.08 1.48-.61 1.7-1.2.21-.59.21-1.09.15-1.2-.06-.12-.23-.19-.48-.32z"/>
+  </svg>
+  WhatsApp
+</a>
+
+
+<!-- Footer -->
     <footer class="bg-gray-900 text-center text-gray-500 py-4 border-t border-gray-700">
       © 2025 Raul Silva Pereira • 
     </footer>
