Atualização com link para o linkedin

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <div class="max-w-4xl mx-auto px-4 text-center">
         <h3 class="text-3xl font-semibold text-cyan-400 mb-4">🎓 Formação</h3>
         <p class="text-gray-300">Engenharia de Computação — Universidade São Judas Tadeu</p>
+        <p class="text-gray-300">Técnico em Informática  — Universidade Cruzeiro Do Sul</p>
       </div>
     </section>
 
@@ -181,19 +182,29 @@
       </div>
     </section>
 
+
+<!-- Botão LinkedIn flutuante -->
+<a href="https://www.linkedin.com/in/raul-silva-2bb687235/"
+   class="fixed bottom-20 right-6 bg-blue-600 hover:bg-blue-700 text-white p-4 rounded-full shadow-lg z-50"
+   target="_blank"
+   aria-label="Perfil no LinkedIn">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M19 0h-14c-2.761 0-5 2.238-5 5v14c0 2.762 2.239 5 5 5h14c2.762 0 5-2.238 5-5v-14c0-2.762-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764c.965 0 1.75.79 1.75 1.764s-.785 1.764-1.75 1.764zm13.5 11.268h-3v-5.604c0-1.337-.025-3.06-1.865-3.06-1.867 0-2.153 1.459-2.153 2.964v5.7h-3v-10h2.881v1.367h.041c.402-.762 1.384-1.566 2.848-1.566 3.046 0 3.611 2.006 3.611 4.617v5.582z"/>
+  </svg>
+</a>
+
+
     
 <!-- Botão WhatsApp -->
-<a
-  href="https://wa.me/5511951409631"
-  target="_blank"
-  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg transition-all duration-300 z-50 flex items-center"
-  title="Fale comigo no WhatsApp"
->
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
-    <path d="M12.04 2c-5.51 0-9.98 4.47-9.98 9.98 0 1.76.46 3.44 1.32 4.93L2 22l5.26-1.38c1.44.79 3.08 1.21 4.77 1.21h.01c5.51 0 9.98-4.47 9.98-9.98 0-2.67-1.04-5.17-2.93-7.07A9.959 9.959 0 0012.04 2zm0 18c-1.44 0-2.85-.37-4.1-1.08l-.29-.16-3.13.82.84-3.06-.17-.32A8.016 8.016 0 014.04 12c0-4.42 3.6-8.02 8.02-8.02 2.15 0 4.17.84 5.69 2.36a7.978 7.978 0 012.36 5.66c0 4.42-3.6 8-8.02 8zm4.53-6.27c-.25-.13-1.48-.73-1.71-.81-.23-.08-.4-.13-.56.13-.16.25-.64.81-.78.97-.14.16-.29.17-.54.04-.25-.13-1.06-.39-2.02-1.25-.75-.67-1.26-1.49-1.41-1.73-.15-.25-.02-.38.11-.51.12-.12.27-.3.4-.45.13-.15.17-.25.25-.42.08-.17.04-.31-.02-.45-.06-.13-.56-1.35-.77-1.85-.2-.48-.4-.42-.56-.43l-.48-.01c-.17 0-.45.06-.69.31s-.91.89-.91 2.17.93 2.51 1.06 2.68c.13.17 1.83 2.8 4.43 3.93.62.27 1.1.43 1.48.55.62.2 1.18.17 1.63.1.5-.08 1.48-.61 1.7-1.2.21-.59.21-1.09.15-1.2-.06-.12-.23-.19-.48-.32z"/>
+<a href="https://wa.me/5511951409631"
+   class="fixed bottom-4 right-6 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50"
+   target="_blank"
+   aria-label="Fale comigo no WhatsApp">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M12.04 2C6.51 2 2 6.53 2 12.06c0 1.91.5 3.74 1.44 5.36L2 22l4.73-1.39a9.963 9.963 0 005.31 1.46c5.53 0 10.06-4.51 10.06-10.05C22.1 6.53 17.57 2 12.04 2zm0 18.19c-1.63 0-3.22-.44-4.61-1.27l-.33-.2-2.8.83.83-2.73-.21-.35a8.11 8.11 0 01-1.25-4.36c0-4.5 3.66-8.16 8.17-8.16s8.17 3.66 8.17 8.16c0 4.5-3.66 8.16-8.17 8.16zm4.68-6.3c-.26-.13-1.53-.76-1.77-.85s-.41-.13-.58.13-.67.84-.82 1.01-.3.2-.56.07a6.67 6.67 0 01-1.95-1.2 7.35 7.35 0 01-1.36-1.7c-.14-.25 0-.39.1-.52.1-.1.25-.26.38-.4.12-.13.17-.21.25-.35s.04-.26-.02-.38c-.06-.12-.57-1.39-.79-1.9-.2-.48-.4-.41-.58-.42-.15 0-.3 0-.46 0s-.4.06-.61.26c-.2.2-.78.76-.78 1.85s.8 2.15.9 2.3c.12.16 1.56 2.38 3.78 3.34.53.23.95.37 1.28.48.54.17 1.03.14 1.41.08.43-.06 1.32-.54 1.5-1.05s.18-.96.13-1.05c-.05-.1-.24-.17-.5-.3z"/>
   </svg>
-  WhatsApp
 </a>
+
 
 
 <!-- Footer -->
