--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         scroll-behavior: smooth;
       }
     </style>
+
+  
+
+  <!-- Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XW4BT1XH13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XW4BT1XH13');
+  </script>
+
   </head>
 
   <body class="bg-gray-900 text-white font-sans">
@@ -168,7 +180,7 @@
     <section id="formacao" class="py-16 bg-gray-900" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4 text-center">
         <h3 class="text-3xl font-semibold text-cyan-400 mb-4">🎓 Formação</h3>
-        <p class="text-gray-300">Engenharia de Computação — Universidade São Judas Tadeu</p>
+        <p class="text-gray-300">Engenharia da Computação — Universidade São Judas Tadeu</p>
         <p class="text-gray-300">Técnico em Informática  — Universidade Cruzeiro Do Sul</p>
       </div>
     </section>
