Correção  indexação google.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raul Silva Pereira — Portfólio Profissional</title>
+    <title>Raul Silva Pereira – Engenheiro da Computação | Consultoria de TI, Infraestrutura, Automação, Segurança, Office 365,Suporte Corporativo e Manutenção de Computadores </title>
+  <meta name="description" content="Raul Silva Pereira – Engenheiro de Computação oferece consultoria em TI, infraestrutura, automação, segurança da informação, continuidade de negócios, implantação de Office 365, AD, backup (Veeam), VDI, servidores Linux/Windows e suporte corporativo especializado.">
+  <meta name="keywords" content="Raul Silva Pereira, engenheiro de computação, consultoria de ti, infraestrutura de redes, automação, segurança da informação, continuidade de negócios, office 365, exchange online, active directory, linux server, vmware, veeam backup, vdi, certificados digitais, suporte remoto, manutenção de computadores">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,9 +21,7 @@
         scroll-behavior: smooth;
       }
     </style>
-
-  
-
+    
   <!-- Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XW4BT1XH13"></script>
   <script>
@@ -148,6 +148,19 @@
             </ul>
           </div>
 
+         <div>
+            <h4 class="text-xl font-bold text-cyan-400">Manutenção de Computadores</h4>
+            <ul class="list-disc list-inside text-gray-300">
+              <li>Diagnóstico e correção de falhas em hardware e software</li>
+              <li>Formatação, limpeza e otimização de desempenho</li>
+              <li>Troca de peças e upgrades (HD, SSD, memória, etc.)</li>
+              <li>Instalação de sistemas operacionais e drivers</li>
+              <li>Suporte remoto ou presencial para computadores pessoais e empresariais</li>
+            </ul>
+          </div>
+
+
+
           <div>
             <h4 class="text-xl font-bold text-cyan-400">Setor Automotivo</h4>
             <ul class="list-disc list-inside text-gray-300">
@@ -180,7 +193,7 @@
     <section id="formacao" class="py-16 bg-gray-900" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4 text-center">
         <h3 class="text-3xl font-semibold text-cyan-400 mb-4">🎓 Formação</h3>
-        <p class="text-gray-300">Engenharia da Computação — Universidade São Judas Tadeu</p>
+        <p class="text-gray-300">Engenharia d Computação — Universidade São Judas Tadeu</p>
         <p class="text-gray-300">Técnico em Informática  — Universidade Cruzeiro Do Sul</p>
       </div>
     </section>
