correção de texto

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <section id="formacao" class="py-16 bg-gray-900" data-aos="fade-up">
       <div class="max-w-4xl mx-auto px-4 text-center">
         <h3 class="text-3xl font-semibold text-cyan-400 mb-4">🎓 Formação</h3>
-        <p class="text-gray-300">Engenharia d Computação — Universidade São Judas Tadeu</p>
+        <p class="text-gray-300">Engenharia da Computação — Universidade São Judas Tadeu</p>
         <p class="text-gray-300">Técnico em Informática  — Universidade Cruzeiro Do Sul</p>
       </div>
     </section>
